infrastructure/controllers/_legacy/gateway-ingress/ingress/ingress-httpecho-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-echo-tls-passthrough
  labels:
    name: http-echo
  namespace: http-ingress
  annotations: 
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  rules:
  - host: test-tls-passthrough.k8s.doblerones.de
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: http-echo
            port: 
              number: 80
  tls:
  - hosts:
    - test-tls-passthrough.k8s.doblerones.de
    secretName: test-tls-passthrough-tls
