infrastructure/controllers/_legacy/gateway-ingress/ingress/ingress-httpecho-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-echo
  labels:
    name: http-echo
  namespace: http-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: test-ingress.k8s.doblerones.de
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: http-echo
            port: 
              number: 80
